# TenderHackML-DS_API

./: README.md  main.py  pyproject.toml
src/: app.py  controllers.py  create_database.py  create_pkl.py  database.py  metrics.py  request.py
src/data/: most_frequent_lot_name_in_region.csv  number_of_companies_all_regions.csv  number_region_lot_name.csv
src/models/: model.pkl  model.py  pipeline.py
