[tool.poetry]
name = "flaskproject"
version = "0.1.0"
description = ""
authors = ["MurenMurenus <murenmurenus@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = {extras = ["async"], version = "^2.2.3"}
scikit-learn = "^1.2.2"
pandas = "^1.5.3"
joblib = "^1.2.0"
pymongo = "^4.3.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
